Update Valentine message and name in index.html

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 </audio>
 
 <div class="card">
-  <h1>Motii, will you be my Valentine? 💖</h1>
+  <h1>👉🏻👈🏻 Riya, will you be my Valentine? 💖</h1>
   <div class="buttons">
     <button id="yes">Yes 💘</button>
     <button id="no">No 🙃</button>
   </div>
-  <div id="message">Yayyy Motii! 💕 You made my Valentine perfect 😍</div>
+  <div id="message">Yayyy Tikki! 💕 You made my Valentine perfect 😍</div>
 </div>
 
 <script>
